--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ license = "GPL-3.0-or-later"
 [tool.poetry.dependencies]
 python = "^3.6"
 sympy = "^1.7.1"
+cleo = "^0.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
+
+[tool.poetry.scripts]
+gac = "gac.console:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
