--- a/naunet/cxx_src/cvode_example/src/CMakeLists.txt
+++ b/naunet/cxx_src/cvode_example/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(GAC VERSION 0.1.0)
+project(NAUNET VERSION 0.1.0)
 
 find_library(CVODE sundials_cvode)
 if (NOT CVODE)
@@ -15,11 +15,11 @@ endif()
 
 
 
-add_executable(gac main.cpp)
+add_executable(naunet main.cpp)
 
 include_directories(/usr/local/include)
 #link_directories(/usr/local/lib)
-#target_link_libraries(gac sundials_cvode sundials_nvecserial)
+#target_link_libraries(naunet sundials_cvode sundials_nvecserial)
 
-target_link_libraries(gac ${CVODE} ${NVECTOR_S})
+target_link_libraries(naunet ${CVODE} ${NVECTOR_S})
 
