--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gac"
+name = "naunet"
 version = "0.1.0"
 description = ""
 authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
@@ -14,7 +14,7 @@ cleo = "^0.8.1"
 pytest = "^6.2.0"
 
 [tool.poetry.scripts]
-gac = "gac.console:main"
+naunet = "naunet.console:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
