--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0-or-later"
 python = "^3.6"
 sympy = "^1.7.1"
 cleo = "^0.8.1"
+Jinja2 = "^2.11.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
