--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.6"
 sympy = "^1.7.1"
 cleo = "^0.8.1"
 Jinja2 = "^2.11.2"
+tomlkit = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
