--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ cleo = "^0.8.1"
 Jinja2 = "^2.11.2"
 tomlkit = "^0.7.0"
 tqdm = "^4.58.0"
+lark = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
