FIx minor bug and set a benchmark test

--- a/naunet/cxx_src/cvode_example/CMakeLists.txt
+++ b/naunet/cxx_src/cvode_example/CMakeLists.txt
@@ -12,7 +12,7 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 IF (CMAKE_BUILD_TYPE STREQUAL Debug)
-    ADD_DEFINITIONS(-DDEBUG)
+    ADD_DEFINITIONS(-DNAUNET_DEBUG)
 ENDIF()
 
 
