Try KLU solver with sparse matrix

--- a/naunet/cxx_src/cvode_example/src/CMakeLists.txt
+++ b/naunet/cxx_src/cvode_example/src/CMakeLists.txt
@@ -6,6 +6,10 @@ target_link_libraries(naunet_ode SUNDIALS::cvode_static SUNDIALS::nvecserial_sta
 
 add_library(naunet STATIC naunet.cpp)
 target_include_directories(naunet PUBLIC ${CMAKE_SOURCE_DIR}/include)
+# for klu.h
+target_include_directories(naunet PUBLIC /usr/local/include)
 target_link_libraries(naunet SUNDIALS::cvode_static SUNDIALS::nvecserial_static)
+target_link_libraries(naunet SUNDIALS::sunlinsolklu_static SUNDIALS::sunmatrixsparse_static)
+target_link_libraries(naunet m)
 
 
