--- a/naunet/cxx_src/cvode_example/CMakeLists.txt
+++ b/naunet/cxx_src/cvode_example/CMakeLists.txt
@@ -5,7 +5,7 @@ project(NAUNET VERSION 0.1.0)
 
 include(CMakePrintHelpers)
 
-set (CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
@@ -17,6 +17,7 @@ ENDIF()
 
 
 set(SUNDIALS_MIN_VERSION "5.6.1")
+set(SUNDIALS_DIR "" CACHE PATH "Path to SUNDIALSConfig.cmake")
 find_package(SUNDIALS ${SUNDIALS_MIN_VERSION} REQUIRED CONFIG)
 
 # IF (CMAKE_BUILD_TYPE STREQUAL Debug)
