--- a/naunet/cxx_src/cvode_example/src/CMakeLists.txt
+++ b/naunet/cxx_src/cvode_example/src/CMakeLists.txt
@@ -1,15 +1,17 @@
 
+list(APPEND SUNDIALSLIB
+    SUNDIALS::cvode
+    SUNDIALS::nvecserial
+    SUNDIALS::sunlinsolklu
+    SUNDIALS::sunmatrixsparse
+)
 
 add_library(naunet_ode STATIC naunet_ode.cpp)
 target_include_directories(naunet_ode PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(naunet_ode SUNDIALS::cvode_static SUNDIALS::nvecserial_static)
+target_link_libraries(naunet_ode ${SUNDIALSLIB})
 
 add_library(naunet STATIC naunet.cpp)
 target_include_directories(naunet PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# for klu.h
-target_include_directories(naunet PUBLIC /usr/local/include)
-target_link_libraries(naunet SUNDIALS::cvode_static SUNDIALS::nvecserial_static)
-target_link_libraries(naunet SUNDIALS::sunlinsolklu_static SUNDIALS::sunmatrixsparse_static)
-target_link_libraries(naunet m)
+target_link_libraries(naunet ${SUNDIALSLIB})
 
 
