--- a/naunet/cxx_src/cvode_example/test/CMakeLists.txt
+++ b/naunet/cxx_src/cvode_example/test/CMakeLists.txt
@@ -1,7 +1,11 @@
 
+list(APPEND NAUNETLIB
+    naunet_ode
+    naunet
+)
+
 add_executable(naunet.x main.cpp)
 
-# target_link_libraries(naunet.x naunet naunet_ode SUNDIALS::cvode_static SUNDIALS::nvecserial_static)
-target_link_libraries(naunet.x naunet naunet_ode)
+target_link_libraries(naunet.x ${NAUNETLIB})
 file(COPY timeres.dat DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
