--- a/naunet/templates/cvode/test/CMakeLists.txt
+++ b/naunet/templates/cvode/test/CMakeLists.txt
@@ -6,6 +6,7 @@ list(APPEND NAUNETLIB
 
 add_executable(naunet.x main.cpp)
 
+target_include_directories(naunet.x PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 target_link_libraries(naunet.x ${NAUNETLIB})
 file(COPY timeres.dat DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
