--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ matrix.os }}-poetry-${{ hashFiles('poetry.lock') }}
+          key: ${{ matrix.os }}-python${{ matrix.python }}-poetry-${{ hashFiles('poetry.lock') }}
 
       - run: poetry --version
 
@@ -72,7 +72,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Set up Pyhon
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
@@ -86,14 +86,32 @@ jobs:
         run: pip install .
 
       - name: Create naunet examples
-        run: |
-          cd $HOME
-          naunet example --select=0 --dest=naunet_example0
-          naunet example --select=1 --dest=naunet_example1
+        run: source ./scripts/actions/create_examples.sh
 
       - name: Install BLAS & LAPACK
         run: sudo apt-get install libblas-dev liblapack-dev
-        
+
+      - name: Cache boost
+        uses: actions/cache@v2
+        id: boost
+        with:
+          path: $HOME/boost
+          key: ${{ matrix.os }}-boost1.65
+          
+      - name: Install boost
+        env:
+          CACHE_HIT: ${{ steps.boost.outputs.cache-hit }}
+        run: |
+          if [[ "$CACHE_HIT" == 'true' ]]; then
+            sudo cp --force --recursive ~/boost/* /
+          else
+            sudo apt-get update && sudo apt-get install -yq libboost1.65-dev
+            mkdir -p ~/boost
+            for dep in libboost1.65-dev; do
+                dpkg -L $dep | while IFS= read -r f; do if test -f $f; then echo $f; fi; done | xargs cp --parents --target-directory ~/boost/
+            done
+          fi
+          
       - name: Install SuiteSparse dependencies
         run: sudo apt-get install libgmp3-dev libmpc-dev
 
@@ -101,17 +119,19 @@ jobs:
         uses: actions/cache@v2
         id: suitesparse
         with:
-          path: /usr/local/suitesparse
+          path: $HOME/suitesparse
           key: ${{ matrix.os }}-suitesparse
 
       - name: Install SuiteSparse
-        if: steps.suitesparse.outputs.cache-hit != 'true'
+        env:
+          CACHE_HIT: ${{ steps.suitesparse.outputs.cache-hit }}
         run: |
-          cd $HOME
-          wget https://github.com/DrTimothyAldenDavis/SuiteSparse/archive/refs/tags/v5.9.0.tar.gz 
-          tar -zxvf v5.9.0.tar.gz && cd SuiteSparse-5.9.0
-          make library -j4
-          sudo make install INSTALL=/usr/local/suitesparse
+          if [[ "$CACHE_HIT" == 'true' ]]; then
+            sudo cp --verbose --force --recursive ~/suitesparse/* /usr/local
+          else
+            source ./scripts/actions/install_suitesparse.sh
+          fi
+
       # Use the script from https://github.com/ptheywood/cuda-cmake-github-actions
       - name: Install CUDA
         env:
@@ -131,20 +151,18 @@ jobs:
         uses: actions/cache@v2
         id: sundials
         with:
-          path: /usr/local/sundials
+          path: $HOME/sundials
           key: ${{ matrix.os }}-sundials
 
       - name: Install SUNDIALS
-        if: steps.sundials.outputs.cache-hit != 'true'
+        env:
+          CACHE_HIT: ${{ steps.sundials.outputs.cache-hit }}
         run: |
-          cd $HOME
-          wget https://github.com/LLNL/sundials/releases/download/v5.7.0/sundials-5.7.0.tar.gz
-          tar -zxvf sundials-5.7.0.tar.gz
-          mkdir build-sundials && cd build-sundials
-          cmake ../sundials-5.7.0 -DCMAKE_INSTALL_PREFIX=/usr/local/sundials \
-                -DENABLE_CUDA=ON -DCMAKE_CUDA_COMPILER=nvcc \
-                -DCMAKE_CUDA_ARCHITECTURES=61 -DSUNDIALS_INDEX_SIZE=32 \
-                -DENABLE_KLU=ON -DKLU_INCLUDE_DIR=/usr/local/suitesparse/include \
-                -DKLU_LIBRARY_DIR=/usr/local/suitesparse/lib -DEXAMPLES_ENABLE_C=OFF \
-                -DEXAMPLES_ENABLE_CUDA=OFF -DEXAMPLES_INSTALL=OFF
-          make -j4 && sudo make install
+          if [[ "$CACHE_HIT" == 'true' ]]; then
+            sudo cp --verbose --force --recursive ~/sundials/* /usr/local
+          else
+            source ./scripts/actions/install_sundials.sh
+          fi
+
+      - name: Build naunet examples
+        run: source ./scripts/actions/build_examples.sh
