--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -12,7 +12,7 @@ jobs:
   install:
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-18.04, ubuntu-16.04, windows-latest, macos-latest]
+        os: [ubuntu-latest, ubuntu-18.04, ubuntu-16.04, windows-latest]
         python: [3.7, 3.8]
 
     runs-on: ${{ matrix.os }}
