--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,8 +12,8 @@ jobs:
   install:
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
-        python: [3.7, 3.8]
+        os: [macos-latest]
+        python: [3.8]
 
     runs-on: ${{ matrix.os }}
 
