--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, ubuntu-18.04, ubuntu-16.04]
-        python: [3.7, 3.8]
+        python: [3.8]
 
     runs-on: ${{ matrix.os }}
 
