--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ lark = "^0.11.1"
 pytest = "^6.2.0"
 coverage = "^5.4"
 black = {version = "^20.8b1", allow-prereleases = true}
+MarkupSafe = "^1" # mkdocs-material needs MarkupSafe < 2.0
+mkdocs-material = "^7.1.5"
 
 [tool.poetry.scripts]
 naunet = "naunet.console:main"
