--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
 license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.8"
 cleo = "^0.8.1"
 Jinja2 = "^2.11.2"
 tomlkit = "^0.7.0"
@@ -19,6 +19,7 @@ coverage = "^5.4"
 black = {version = "^20.8b1", allow-prereleases = true}
 MarkupSafe = "^1" # mkdocs-material needs MarkupSafe < 2.0
 mkdocs-material = "^7.1.5"
+numpy = "^1.20.3"
 
 [tool.poetry.scripts]
 naunet = "naunet.console:main"
