Fix some bugs to compile cusparse solver

--- a/naunet/examples/deuterium/test/test.py.in
+++ b/naunet/examples/deuterium/test/test.py.in
@@ -34,9 +34,10 @@ naunet_data.user_Av = 30.0
 naunet_data.user_crflux = 2.5e-17
 naunet_data.user_GtoDN = (4.e0 * pi * rhoD * rD * rD * rD) / (3.e0 * DtoGM * amH)
 
-naunet_solver.initSolver();
+naunet_solver.initSolver()
+# uncomment next line to reset the system size if using cusparse solver
+# naunet_solver.resetSolver(1)
 
-# y = [1.0e-40] * len(species)
 y = np.ones(len(species)) * 1e-40
 # Only works if the species list in naunet_config.toml has been updated
 # Otherwise check the macros in naunet_macros.h
