--- a/naunet/examples/deuterium/test/CMakeLists.txt
+++ b/naunet/examples/deuterium/test/CMakeLists.txt
@@ -9,22 +9,31 @@ get_property(languages GLOBAL PROPERTY ENABLED_LANGUAGES)
 
 add_executable(test_singlegrid.x singlegrid.cpp)
 
+add_executable(test_serialdata.x serialdata.cpp)
+
 if("CUDA" IN_LIST languages)
     target_include_directories(test_singlegrid.x PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+    target_include_directories(test_serialdata.x PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 endif()
 
 # for odeint test
 if(USE_BOOST)
     target_include_directories(test_singlegrid.x PRIVATE ${Boost_INCLUDE_DIRS})
+    target_include_directories(test_serialdata.x PRIVATE ${Boost_INCLUDE_DIRS})
 endif()
 
 target_link_libraries(test_singlegrid.x ${NAUNETLIB})
+target_link_libraries(test_serialdata.x ${NAUNETLIB})
 
 if("CUDA" IN_LIST languages)
     # if CUDA is on, parallel test should be included
-    add_executable(test_parallel.x parallel.cpp)
-    target_include_directories(test_parallel.x PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
-    target_link_libraries(test_parallel.x ${NAUNETLIB})
+    add_executable(test_multiplegrid.x multiplegrid.cpp)
+    target_include_directories(test_multiplegrid.x PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+    target_link_libraries(test_multiplegrid.x ${NAUNETLIB})
+
+    add_executable(test_paralleldata.x paralleldata.cpp)
+    target_include_directories(test_paralleldata.x PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+    target_link_libraries(test_paralleldata.x ${NAUNETLIB})
 
     # test if gpu device is found when CUDA is enabled
     if(${NVIDIA_GPU_COUNT})
@@ -33,8 +42,16 @@ if("CUDA" IN_LIST languages)
             COMMAND $<TARGET_FILE:test_singlegrid.x>
         )
         add_test(
-            NAME test_parallel
-            COMMAND $<TARGET_FILE:test_parallel.x>
+            NAME test_serialdata
+            COMMAND $<TARGET_FILE:test_serialdata.x>
+        )
+        add_test(
+            NAME test_multiplegrid
+            COMMAND $<TARGET_FILE:test_multiplegrid.x>
+        )
+        add_test(
+            NAME test_paralleldata
+            COMMAND $<TARGET_FILE:test_paralleldata.x>
         )
     endif()
 else()
@@ -42,6 +59,10 @@ else()
     add_test(
         NAME test_singlegrid
         COMMAND $<TARGET_FILE:test_singlegrid.x>
+    )
+    add_test(
+        NAME test_serialdata
+        COMMAND $<TARGET_FILE:test_serialdata.x>
     )
 endif()
 
@@ -62,4 +83,5 @@ if(MAKE_PYTHON)
 endif()
 
 file(COPY timeres.dat DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY grids.dat DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
