--- a/naunet/examples/deuterium/test/CMakeLists.txt
+++ b/naunet/examples/deuterium/test/CMakeLists.txt
@@ -17,7 +17,13 @@ set(
     serialdata
 )
 
+# force cmake to have the same macro defined in naunet_macros.h
+# use CapWords convention to use in test.py
+set(USE_CUDA False)
+
 if("CUDA" IN_LIST languages)
+    set(USE_CUDA True)
+
     list(
         APPEND ${TESTTARGETS}
             multiplegrid
