Reduce tests in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -116,6 +116,6 @@ jobs:
 
       - name: Test naunet examples
         run: |
-          cd $HOME/naunet_example0/build && ctest --output-on-failure
-          cd $HOME/naunet_example1/build && ctest --output-on-failure
-          cd $HOME/naunet_example3/build && ctest --output-on-failure
+          cd $HOME/naunet_example0/build && ctest -R "single|pymodule" -j4 --output-on-failure
+          cd $HOME/naunet_example1/build && ctest -R "single|pymodule" -j4 --output-on-failure
+          cd $HOME/naunet_example3/build && ctest -R "single|pymodule" -j4 --output-on-failure
