Create "summay" table after renderring

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -4,8 +4,12 @@ name: ubuntu
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
 
