--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -4,8 +4,12 @@ name: macos
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
 
