--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,7 +3,7 @@ name: macos
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, clangformat ]
     paths-ignore:
       - 'docs/**'
   pull_request:
