--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -6,10 +6,12 @@ on:
     branches: [ main ]
     paths-ignore:
       - 'docs/**'
+      - 'notebooks/**'
   pull_request:
     branches: [ main ]
     paths-ignore:
       - 'docs/**'
+      - 'notebooks/**'
 
 jobs:
 
