--- a/naunet/examples/primordial/test/test.py.in
+++ b/naunet/examples/primordial/test/test.py.in
@@ -18,8 +18,9 @@ has_thermal = True if heating or cooling else False
 nspec = len(species)
 neqns = nspec + has_thermal
 
-times = np.logspace(5, 8, 51)
-timesteps = times[1:] - times[:-1]
+times = np.logspace(3, 8, 51)
+timesteps = times[0]
+timesteps = np.append(timesteps, times[1:] - times[:-1])
 
 naunet_solver = Naunet()
 naunet_data = NaunetData()
@@ -51,12 +52,15 @@ naunet_solver.Solve(y, 1e4, naunet_data)
 
 with open("evolution_pymodule.dat", "w") as evoldat:
 
+    curtime = 0.0
+
     for ti, dtyr in enumerate(timesteps):
+        curtime += dtyr
         dt = dtyr * spy
         y = naunet_solver.Solve(y, dt, naunet_data)
 
         fmty = [f"{yi:13.7e}" for yi in y]
-        evoldat.write(" ".join([f"{times[ti+1]:13.7e}", *fmty]))
+        evoldat.write(" ".join([f"{curtime:13.7e}", *fmty]))
         evoldat.write("\n")
 
 naunet_solver.Finalize();
