Fix bug in CMakeLists

--- a/naunet/examples/primordial/test/CMakeLists.txt
+++ b/naunet/examples/primordial/test/CMakeLists.txt
@@ -23,10 +23,12 @@ set(USE_CUDA False)
 if("CUDA" IN_LIST languages)
     set(USE_CUDA True)
     list(
-        APPEND ${TESTTARGETS}
+        APPEND TESTTARGETS
             multiplegrid
     )
 endif()
+
+message(STATUS "Test targets               = ${TESTTARGETS}")
 
 foreach(name ${TESTTARGETS})
 
