--- a/naunet/examples/deuterium/test/CMakeLists.txt
+++ b/naunet/examples/deuterium/test/CMakeLists.txt
@@ -25,11 +25,13 @@ if("CUDA" IN_LIST languages)
     set(USE_CUDA True)
 
     list(
-        APPEND ${TESTTARGETS}
+        APPEND TESTTARGETS
             multiplegrid
             paralleldata
     )
 endif()
+
+message(STATUS "Test targets               = ${TESTTARGETS}")
 
 foreach(name ${TESTTARGETS})
 
