--- a/naunet/examples/fake/test/CMakeLists.txt
+++ b/naunet/examples/fake/test/CMakeLists.txt
@@ -24,6 +24,8 @@ if("CUDA" IN_LIST languages)
     set(USE_CUDA True)
 endif()
 
+message(STATUS "Test targets               = ${TESTTARGETS}")
+
 foreach(name ${TESTTARGETS})
 
     set(targetname test_${name})
