--- a/naunet/examples/fake/test/CMakeLists.txt
+++ b/naunet/examples/fake/test/CMakeLists.txt
@@ -22,6 +22,11 @@ set(USE_CUDA False)
 
 if("CUDA" IN_LIST languages)
     set(USE_CUDA True)
+
+    list(
+        APPEND TESTTARGETS
+            multiplegrid
+    )
 endif()
 
 message(STATUS "Test targets               = ${TESTTARGETS}")
