Fix cloud test problem initial condition

--- a/naunet/examples/cloud/test/test.py.in
+++ b/naunet/examples/cloud/test/test.py.in
@@ -17,41 +17,41 @@ naunet_solver = Naunet()
 naunet_data = NaunetData()
 
 spy = 86400.0 * 365.0
-nH = 2e4;
-zeta = 1.3e-17;
-Tgas = 15.0;
-Av = 10.0;
-omega = 0.5;
-G0 = 1.0;
-rG = 1e-5;
-gdens = 2.4e-12;
-sites = 1.5e15;
-fr = 1.0;
-opt_thd = 1.0;
-opt_crd = 1.0;
-opt_uvd = 1.0;
-opt_h2d = 1.0;
-crdeseff = 1.0e5;
-h2deseff = 1.0e-2;
-uvcreff = 1.0e-3;
+nH = 2e4
+zeta = 1.3e-17
+Tgas = 15.0
+Av = 10.0
+omega = 0.5
+G0 = 1.0
+rG = 1e-5
+gdens = 7.6394373e-13 * nH
+sites = 1.5e15
+fr = 1.0
+opt_thd = 1.0
+opt_crd = 1.0
+opt_uvd = 1.0
+opt_h2d = 1.0
+crdeseff = 1.0e5
+h2deseff = 1.0e-2
+uvcreff = 1.0e-3
 
-naunet_data.nH = nH;
-naunet_data.zeta = zeta;
-naunet_data.Tgas = Tgas;
-naunet_data.Av = Av;
-naunet_data.omega = omega;
-naunet_data.G0 = G0;
-naunet_data.rG = rG;
-naunet_data.gdens = gdens;
-naunet_data.sites = sites;
-naunet_data.fr = fr;
-naunet_data.opt_thd = opt_thd;
-naunet_data.opt_crd = opt_crd;
-naunet_data.opt_uvd = opt_uvd;
-naunet_data.opt_h2d = opt_h2d;
-naunet_data.crdeseff = crdeseff;
-naunet_data.h2deseff = h2deseff;
-naunet_data.uvcreff = uvcreff;
+naunet_data.nH = nH
+naunet_data.zeta = zeta
+naunet_data.Tgas = Tgas
+naunet_data.Av = Av
+naunet_data.omega = omega
+naunet_data.G0 = G0
+naunet_data.rG = rG
+naunet_data.gdens = gdens
+naunet_data.sites = sites
+naunet_data.fr = fr
+naunet_data.opt_thd = opt_thd
+naunet_data.opt_crd = opt_crd
+naunet_data.opt_uvd = opt_uvd
+naunet_data.opt_h2d = opt_h2d
+naunet_data.crdeseff = crdeseff
+naunet_data.h2deseff = h2deseff
+naunet_data.uvcreff = uvcreff
 
 naunet_solver.Init()
 if @USE_CUDA@:
