--- a/naunet/templates/patches/enzo/Make.config.settings
+++ b/naunet/templates/patches/enzo/Make.config.settings
@@ -41,6 +41,9 @@
 #    CONFIG_SET_ACCELERATION_BOUNDARY
 #    CONFIG_ENZO_PERFORMANCE
 #    CONFIG_GRACKLE
+#    CONFIG_LOG2ALLOC
+#    CONFIG_UUID
+#    CONFIG_NAUNET
 #    CONFIG_FFTW
 #
 #=======================================================================
@@ -316,15 +319,6 @@
      CONFIG_GRACKLE = no
 
 #======================================================================= 
-# CONFIG_NAUNET
-#======================================================================= 
-#    yes           Compile with NAUNET support
-#    no            Compile without NAUNET support
-#----------------------------------------------------------------------- 
- 
-     CONFIG_NAUNET = no
-
-#======================================================================= 
 # CONFIG_LOG2ALLOC
 #======================================================================= 
 #    yes           Compile with power of 2 block size allocations
@@ -332,6 +326,24 @@
 #----------------------------------------------------------------------- 
  
      CONFIG_LOG2ALLOC = no
+
+#=======================================================================
+# CONFIG_UUID
+#=======================================================================
+#    yes           Compile with uuid
+#    no            Compile without uuid
+#-----------------------------------------------------------------------
+
+     CONFIG_UUID = yes
+
+#======================================================================= 
+# CONFIG_NAUNET
+#======================================================================= 
+#    yes           Compile with NAUNET support
+#    no            Compile without NAUNET support
+#----------------------------------------------------------------------- 
+ 
+     CONFIG_NAUNET = no
 
 #======================================================================= 
 # CONFIG_FFTW
