Add variables to constraint the desorption binding energy in uclchem

--- a/naunet/examples/cloud/test/test.py.in
+++ b/naunet/examples/cloud/test/test.py.in
@@ -31,6 +31,9 @@ opt_thd = 1.0
 opt_crd = 1.0
 opt_uvd = 1.0
 opt_h2d = 1.0
+eb_crd = 1.21e3;
+eb_h2d = 1.21e3;
+eb_uvd = 1.00e4;
 crdeseff = 1.0e5
 h2deseff = 1.0e-2
 uvcreff = 1.0e-3
@@ -49,6 +52,9 @@ naunet_data.opt_thd = opt_thd
 naunet_data.opt_crd = opt_crd
 naunet_data.opt_uvd = opt_uvd
 naunet_data.opt_h2d = opt_h2d
+naunet_data.eb_crd = eb_crd;
+naunet_data.eb_h2d = eb_h2d;
+naunet_data.eb_uvd = eb_uvd;
 naunet_data.crdeseff = crdeseff
 naunet_data.h2deseff = h2deseff
 naunet_data.uvcreff = uvcreff
