--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ black = {version = "^20.8b1", allow-prereleases = true}
 MarkupSafe = "^1" # mkdocs-material needs MarkupSafe < 2.0
 mkdocs-material = "^7.1.5"
 numpy = "^1.20.3"
+mkdocstrings-python = "^0.6.5"
 
 [tool.poetry.scripts]
 naunet = "naunet.console:main"
