--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,15 @@ Jinja2 = "^2.11.2"
 tomlkit = "^0.7.0"
 tqdm = "^4.58.0"
 lark = "^0.11.1"
+MarkupSafe = "2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.0"
 coverage = "^5.4"
 black = {version = "^20.8b1", allow-prereleases = true}
-MarkupSafe = "^1" # mkdocs-material needs MarkupSafe < 2.0
-mkdocs-material = "^7.1.5"
 numpy = "^1.20.3"
 mkdocstrings-python = "^0.6.5"
+mkdocs-material = "^8.2.5"
 
 [tool.poetry.scripts]
 naunet = "naunet.console:main"
