Make reaction class can create reaction instance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "CMakeLists.txt.j2": "cmake",
         "Make.*": "makefile",
     },
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "python.formatting.provider": "black"
 }
