--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "naunet"
-version = "0.2.0"
+version = "0.3.0-alpha"
 description = ""
 authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
 license = "GPL-3.0-or-later"
